apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx-custom
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30009
