apps/nginx/ingress_org1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: org1-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: org1.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: org1-server
            port:
              name: http
